Fix position of power button on iOS when shown in place of player icon in toolbar.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -483,7 +483,8 @@ div.v-subheader {
 
 .maintoolbar-player-power-button, .maintoolbar-player-power-button:hover {
  position:fixed;
- left:24px;
+ left:24px!important;
+ top:0px!important;
  z-index:5;
 }
 
